Add EmailJS script to contact.html

--- a/contact.html
+++ b/contact.html
@@ -266,6 +266,7 @@
     </footer>
     
     <!-- JavaScript Files: Common functionality + Page-specific -->
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
     <script src="js/common.js"></script>
     <script src="js/contact.js"></script>
   </body>
