Update CV download button link

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
           <!-- Download CV button -->
           <button
             class="btn btn-color-2"
-            onclick="window.open('./assets/resume-example.pdf')"
+            onclick="window.open('./assets/Betsaleel_Mukuba_CV.pdf')"
           >
             Download CV
           </button>
