--- a/experience.html
+++ b/experience.html
@@ -216,23 +216,32 @@
     </div>
     
     <!-- ===== FOOTER ===== -->
-    <footer>
-      <div class="social-links">
-        <a href="https://wa.me/260969508654" target="_blank" aria-label="WhatsApp">
-          <i class="fab fa-whatsapp"></i>
-        </a>
-        <a href="https://linkedin.com/" target="_blank" aria-label="LinkedIn">
-          <i class="fab fa-linkedin"></i>
-        </a>
-        <a href="https://facebook.com/" target="_blank" aria-label="Facebook">
-          <i class="fab fa-facebook"></i>
-        </a>
-        <a href="https://github.com/" target="_blank" aria-label="GitHub">
-          <i class="fab fa-github"></i>
-        </a>
-      </div>
-      <p>Copyright &#169; 2026 Betsaleel Mukuba. All Rights Reserved.</p>
-    </footer>
+  <footer>
+  <nav class="footer-nav">
+    <a href="index.html">Home</a>
+    <a href="about.html">About</a>
+    <a href="experience.html">Experience</a>
+    <a href="projects.html">Projects</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+
+  <div class="social-links">
+    <a href="https://wa.me/260969508654" target="_blank" aria-label="WhatsApp">
+      <i class="fab fa-whatsapp"></i>
+    </a>
+    <a href="https://linkedin.com/in/betsaleel-mukuba" target="_blank" aria-label="LinkedIn">
+      <i class="fab fa-linkedin"></i>
+    </a>
+    <a href="https://facebook.com/betsa.mukuba" target="_blank" aria-label="Facebook">
+      <i class="fab fa-facebook"></i>
+    </a>
+    <a href="https://github.com/MK7-SIETE" target="_blank" aria-label="GitHub">
+      <i class="fab fa-github"></i>
+    </a>
+  </div>
+
+  <p>Copyright &#169; 2026 Betsaleel Mukuba. All Rights Reserved.</p>
+</footer>
     
     <script src="js/common.js"></script>
     <script src="js/experience.js"></script>
